@@ -5,6 +5,7 @@ Date: ????
     - Use LuaItemPrototype::get_module_effects
     - Support generator with burns_fluid=true
     - Support fusion-generator with burns_fluid and effectivity
+    - Support mining_drill with resource_searching_offset
 ---------------------------------------------------------------------------------------------------
 Version: 0.4.3
 Date: 2025-09-06
